<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context="com.mckuai.mcstar.fragment.ReadyFragment">


    <LinearLayout
        android:id="@+id/paper_head_layout"
        android:layout_width="@dimen/paper_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/paper_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/paper_cover_height"
            android:layout_alignParentRight="true"
            android:background="@color/background_image"
            android:minHeight="300dp"
            android:minWidth="150dp" />

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/background_lightpale">
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/paper_examinees"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:text="@string/paper_examinees" />

             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/paper_seckill"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@id/paper_examinees"
                 android:gravity="right"
                 android:layout_centerHorizontal="true"
                 android:text="@string/paper_seckill" />

         </RelativeLayout>

        <com.malinskiy.superrecyclerview.SuperRecyclerView
            android:id="@+id/userlist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/userlist_height"
            android:layout_below="@id/paper_examinees"
            android:background="@color/background_lightpale">

        </com.malinskiy.superrecyclerview.SuperRecyclerView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/readarea_height"
            android:background="@color/background_item">



            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="10"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/time"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/divi_height"
                android:text="@string/paper_ready" />

        </RelativeLayout>







    </LinearLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/divi_height"
        android:layout_centerHorizontal="true"
        android:text="@string/paper_more" />


</RelativeLayout>
