<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mckuai.mcstar.activity.UserCenterActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/questionsubmit_height"
            android:background="@color/green"
            android:layout_alignParentBottom="true"
            android:text="@string/flaunt"/>
        
        <GridLayout
            android:id="@+id/userinfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/infolayout_height"
            android:layout_above="@id/btn_share"
            android:rowCount="2"
            android:columnCount="2"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="0"
                android:background="@color/background_image"
                android:layout_marginRight="1px"
                android:layout_marginBottom="1px"
                >
                <View
                    android:id="@+id/v_cent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/papercount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/v_cent"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/fontcolor_Primary"
                    android:text="12"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_cent"
                    android:layout_centerHorizontal="true"
                    android:text="@string/papercount"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="0"
                android:background="@color/background_image"
                android:layout_marginLeft="1px"
                android:layout_marginBottom="1px"
                >
                <View
                    android:id="@+id/v_cent1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/contribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/v_cent1"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/fontcolor_Primary"
                    android:text="12"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_cent1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/questioncount"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="1"
                android:background="@color/background_image"
                android:layout_marginTop="1px"
                android:layout_marginRight="1px"
                >
                <View
                    android:id="@+id/v_cent2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/totlescore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/v_cent2"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/fontcolor_Primary"
                    android:text="12"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_cent2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/scores_totle"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:background="@color/background_image"
                android:layout_marginTop="1px"
                android:layout_marginLeft="1px"
                >
                <View
                    android:id="@+id/v_cent3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/avgscore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/v_cent3"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/fontcolor_Primary"
                    android:text="12"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_cent3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/scores_avg"/>
            </RelativeLayout>
        </GridLayout>

        <ImageView
            android:id="@+id/usercover"
            android:layout_width="@dimen/usercover_width"
            android:layout_height="@dimen/usercover_width"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_circle_gray"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usercover"
            android:layout_above="@id/userinfo"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/fontcolor_Primary"
            android:text="用户名字"/>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
